Gtk-3.20&3.22: [Budgie-Desktop] Prevent unwanted label scaling in Clock-Applet
It may be under control of auto-scaling related to panel height,
But sometimes it seems too big enough than we expected...

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -599,6 +599,16 @@ $full_orientation: ((top, bottom),
   button.image-button { padding: rem(8px); }
 }
 
+// clock-applet styling
+.budgie-panel {
+  .start-region,
+  .center-region,
+  .end-region {
+    // shrink label
+    widget > widget > label { font-size: 90%; }
+  }
+}
+
 // notifications
 .budgie-notification-window {
   border-radius: 2px;
